# preprompt

./: .gitignore  .secrets.baseline  BUILD_PLAN.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  preprompt.skill.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: pre_prompt.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
backend/: .env.example  analytics.py  main.py  requirements.txt
cli/: _register.py  commands.py  hook.py  setup.py  watch.py
dashboard/: server.py
dashboard/static/: index.html
docs/: CNAME  index.html  privacy.html  robots.txt  sitemap.xml  success.html  terms.html
docs-site/: classifier.mdx  faq.mdx  getting-started.mdx  introduction.mdx  mint.json  privacy.mdx
docs/alternatives/: index.html
docs/blog/: better-prompts-claude-code.html  index.html  what-is-mcp-server.html  why-ai-prompts-get-mediocre-results.html
docs/integrations/: claude-code.html  cursor.html  windsurf.html
docs/vs/: manual-prompting.html
mcp_server/: classifier.py  config.py  extractor.py  optimizer.py  secret_scanner.py  server.py  tools.py
scripts/: init_github.py  install.sh  install_cursor.py  install_windsurf.py  install_zed.py  setup_global_hook.py  weekly_metrics.py
storage/: db.py
tests/: test_integration.py  test_optimizer.py  test_secret_scanner.py
